Bug 472002 - Some KCMs take a few seconds to load completely
Summary: Some KCMs take a few seconds to load completely
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: general (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Lohnau
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-07-06 12:24 UTC by Patrick Silva
Modified: 2023-07-18 01:07 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screen recording (1.06 MB, video/webm)
2023-07-06 12:24 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2023-07-06 12:24:36 UTC
Created attachment 160100 [details]
screen recording

SUMMARY
When I open Kwin Scripts and Plasma Search KCMs, the tree dots buttons and the buttons on top take a few seconds to appear. Please watch the attached screen recording.

EXPECTED RESULT
the whole KCM loads at once

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.240.0
Qt Version: 6.5.1
Graphics Platform: Wayland
Comment 1 guimarcalsilva 2023-07-09 23:41:28 UTC
I can confirm this happens, at least on a virtual machine and on the X11 session.
Comment 2 Nate Graham 2023-07-15 17:20:27 UTC
I notice that both KCMs are using the PluginSelector component. Does the same issue happen in any other KCMs?
Comment 3 Alexander Lohnau 2023-07-15 18:59:40 UTC
Same if you scroll in the plasmasearch KCM. Some actions are only rendered when scrolling to them, but when scrolling to the top, the ones previously shown take time to render again. 

I asked Marco about this a few days ago, maybe we can investigate it the next days.
Comment 4 Bug Janitor Service 2023-07-17 19:21:51 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kcmutils/-/merge_requests/156
Comment 5 Alexander Lohnau 2023-07-18 01:07:53 UTC
Git commit e84b7c318ee1efc1954cc504e9bc23fc1214e692 by Alexander Lohnau.
Committed on 17/07/2023 at 19:19.
Pushed by alex into branch 'master'.

Fix some QML elements being rendered after delay

This is due to the hacky incubator, which was needed at the time.
However, the crash was fixed by commit
04b0ccabcbf51eb08883671a6f62f2564a6cc12e in Kirigami.
Meaning we can now drop this class.

M  +0    -21   src/qml/sharedqmlengine.cpp

https://invent.kde.org/frameworks/kcmutils/-/commit/e84b7c318ee1efc1954cc504e9bc23fc1214e692