Fix some QML elements being rendered after delay

This is due to the hacky incubator, which was needed at the time.
However, the crash was fixed by commit
04b0ccabcbf51eb08883671a6f62f2564a6cc12e in Kirigami.
Meaning we can now drop this class.

BUG: 472002